--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,14 +8,15 @@ body {
 .main {
     font-family: 'Inter', sans-serif;
     background-color: #0c0c0c;
-    height: 80vh;
-    width: 60vw;
+    height: 90vh;
+    width: 90vw;
     border: 4px solid white;
     border-radius: 25px;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 }
 
 .header {
@@ -182,4 +183,18 @@ body {
     left: 50%;
     transform: translate(-50%, 0%);
     width: 100%;
+}
+
+@media (max-width: 480px) {
+    .form {
+        width: 80vw;
+    }
+
+    .main {
+        font-size: small;
+    }
+
+    .warning {
+        font-size: smaller;
+    }
 }
